Updated imagery and added download links.

--- a/src/content/docs/avatardynamics/intro.mdx
+++ b/src/content/docs/avatardynamics/intro.mdx
@@ -13,4 +13,8 @@ Avatar Dynamics is a simple system that gets you headpat and noseboop interactio
 
 The following pages will tell you some things about the system.
 
+#### Downloads
+<a href="https://buddyworks.gumroad.com/"><b>Gumroad</b></a>  
+<a href="https://repo.buddyworks.wtf/"><b>VPM</b></a>  
+\
 <Aside>The documentation will refer to Avatar Dynamics as **AD**, please keep that in mind.</Aside>
