--- a/src/content/docs/expressionsextension/intro.mdx
+++ b/src/content/docs/expressionsextension/intro.mdx
@@ -13,4 +13,8 @@ Expressions Extension is an easy-to-use system to adjust your avatars facial exp
 
 The following pages will tell you some things about the system.
 
+#### Downloads
+<a href="https://buddyworks.gumroad.com/"><b>Gumroad</b></a>  
+<a href="https://repo.buddyworks.wtf/"><b>VPM</b></a>  
+\
 <Aside>The documentation will refer to Expressions Extension as **EE**, please keep that in mind.</Aside>
