--- a/src/content/docs/framework/intro.mdx
+++ b/src/content/docs/framework/intro.mdx
@@ -11,5 +11,9 @@ import { Aside } from '@astrojs/starlight/components';
 #### Welcome to the Avatar Framework docs.  
 This page will explain various aspects of the framework, from its usage to more advanced applications.  
 
+#### Downloads
+<a href="https://buddyworks.gumroad.com/"><b>Gumroad</b></a>  
+<a href="https://repo.buddyworks.wtf/"><b>VPM</b></a>  
+\
 <Aside> We generally assume Framework v2, but this should mostly apply to v1 as well.</Aside>
 
