--- a/src/content/docs/posesextension/intro.mdx
+++ b/src/content/docs/posesextension/intro.mdx
@@ -13,6 +13,8 @@ Poses Extension is a Locomotion-agnostic pose/emote framework prefilled with var
 
 The following pages will tell you some things about the system.
 
-:::note
-All documents are made for BUDDYWORKS Poses Extension 3 or newer.
-:::
+#### Downloads
+<a href="https://buddyworks.gumroad.com/"><b>Gumroad</b></a>  
+<a href="https://repo.buddyworks.wtf/"><b>VPM</b></a>  
+\
+<Aside> All documents are made for BUDDYWORKS Poses Extension 3 or newer.</Aside>
