--- a/src/content/docs/scene/intro.mdx
+++ b/src/content/docs/scene/intro.mdx
@@ -13,3 +13,7 @@ The BUDDYWORKS Avatar Scene is a premade scene made with avatar editing in mind.
 It contains various prefabs and other neat things.
 
 The following pages will tell you a bit about everything there is to say.
+
+#### Downloads
+<a href="https://buddyworks.gumroad.com/"><b>Gumroad</b></a>  
+<a href="https://repo.buddyworks.wtf/"><b>VPM</b></a>  
