--- a/src/content/docs/toolbox/intro.mdx
+++ b/src/content/docs/toolbox/intro.mdx
@@ -12,3 +12,6 @@ description: Various tools for avatars.
 BUDDYWORKS Toolbox is an assortment of In-Game avatar tools to add some debug and QoL Features to any avatar.
 
 The following pages will tell you a bit about everything there is to say.
+
+#### Downloads
+<a href="https://repo.buddyworks.wtf/"><b>VPM</b></a>  
