--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -14,6 +14,7 @@ hero:
     - text: Visit our website
       link: https://buddyworks.wtf
       icon: external
+      variant: minimal
 ---
 
 import { Icon } from '@astrojs/starlight/components';
