Reworking captions for images.

--- a/src/content/docs/avatardynamics/intro.mdx
+++ b/src/content/docs/avatardynamics/intro.mdx
@@ -4,7 +4,7 @@ description: Free and simple avatar dynamics!
 ---
 import { Aside } from '@astrojs/starlight/components';
 
-![Product Banner.](./img/banner.png)  
+![BUDDYWORKS Avatar Dynamics Banner](./img/banner.png)  
 
 *Free and simple avatar dynamics!*
 
