--- a/src/content/docs/expressionsextension/fx.mdx
+++ b/src/content/docs/expressionsextension/fx.mdx
@@ -12,7 +12,7 @@ By default, EE will be inactive and wait for EE/Active to be true.
 Once that is the case, EE will be engaged and is controlled using the floats.
 
 ### Support Logic
-![PE Action Controller Support Layer.](./img/004.png)  
+![EE Action Controller Support Layer.](./img/004.png)  
 This layer is used for any additional functions.
 
 Currently, it is responsible for making the infinite circle loop work for Mouth and Eye selection.
