--- a/src/content/docs/framework/structure-menu.mdx
+++ b/src/content/docs/framework/structure-menu.mdx
@@ -15,7 +15,7 @@ v2 prefers speedy use, while v1 prefers a fully fledged folder structure.
 
 ### Main Menu
 
-![Menu preview](./img/002.png)  
+![A preview image of the v2 menu structure.](./img/002.png)  
 
 - **Settings:** Any kind of general settings, like contact toggles or other low-frequency options.
 - **Shifts:** All your shifts, be it hue shifts or other sliders, go here.
