--- a/src/content/docs/posesextension/setup.mdx
+++ b/src/content/docs/posesextension/setup.mdx
@@ -8,7 +8,7 @@ import { Aside } from '@astrojs/starlight/components';
 
 Setup is easy, just add the prefab to your avatar and you are ready to go!
 
-![Toolbar menu import.](./img/001.png)  
+![The prefabs, among other things can be spawned into the hierarchy using the toolbar menu.](./img/001.png)  
 
 
 ### Which version to pick?
@@ -35,7 +35,7 @@ PE performs checks to ensure that the necessary component is present in your pro
 If an option is greyed out, you are missing the dependency needed for that option in your project.  
 You don't need to import all dependencies to use PE, either VRCFury or ModularAvatar is sufficient.
 
-![Toolbar menu ggl option.](./img/002.png)  
+![Toolbar menus that are greyed out are missing their dependencies.](./img/002.png)  
 
 ### Checks  
 VRCFury = Is package `com.vrcfury.vrcfury` present?  
