--- a/src/content/docs/scene/intro.mdx
+++ b/src/content/docs/scene/intro.mdx
@@ -3,7 +3,7 @@ title: BUDDYWORKS Avatar Scene
 description: Ready to go Scene for fancy avatar deployments.
 ---
 
-![Product Banner.](./img/banner.png)  
+![BUDDYWORKS Avatar Scene Banner](./img/banner.png)  
 
 *Ready to go Scene for fancy deployments.*
 
