--- a/src/content/docs/scene/overview.mdx
+++ b/src/content/docs/scene/overview.mdx
@@ -6,7 +6,7 @@ import { Aside } from '@astrojs/starlight/components';
 
 #### About the Scene
 
-![The scene's hierarchy.](./img/002.png)  
+![BUDDYWORKS Avatar Scene's hierarchy.](./img/002.png)  
 
 The scene structure is rather simple. The object "\_System" contains all scene elements and assets.  
 <Aside>When installing the VCC version, the AudioLinkAvatar and LTCGI Tester prefabs might not appear if you didn't import the packages beforehand.</Aside>
@@ -18,4 +18,4 @@ The scene structure is rather simple. The object "\_System" contains all scene e
 - **LTCGI Tester:** A tester for LTCGI effects. Note that this only works for materials that support it.
 
 
-![Scene- and Gameview.](./img/003.png)  
+![A preview of the Scene- and Gameview.](./img/003.png)  
