--- a/src/content/docs/expressionsextension/setup.mdx
+++ b/src/content/docs/expressionsextension/setup.mdx
@@ -8,7 +8,7 @@ import { Aside } from '@astrojs/starlight/components';
 
 Setup is easy, just add the prefab to your avatar and you are ready to go!
 
-![Toolbar menu import.](./img/001.png)  
+![The prefab can be imported by using the toolbar menu.](./img/001.png)  
 
 
 ### Which version to pick?
