--- a/src/content/docs/scene/setup.mdx
+++ b/src/content/docs/scene/setup.mdx
@@ -16,7 +16,7 @@ You need to import AudioLink and LTCGI beforehand if you plan to use them.
   	<Steps>
 			1. Getting started is simple, just grab the package from our <a href="https://repo.buddyworks.wtf">VCC Repository</a> and import it into your project.  
 			2. After that, you can copy the data into your */Assets/* directory by using the toolbar menu:  
-			![Toolbar menu import.](./img/001.png)  
+			![The scene data can be generated via the toolbar menu.](./img/001.png)  
 			3. Once done, you will find the data in */Assets/BUDDYWORKS/Avatar Scene*  
 			The script will open the scene for you.
 			<Aside> If there was an error or the data is already imported, the import will abort and you will get a corresponding message printed into your console.</Aside>
@@ -27,7 +27,7 @@ You need to import AudioLink and LTCGI beforehand if you plan to use them.
  			0. **Backup your existing scene!**
  			1. Getting started is simple, just grab the package from our <a href="https://repo.buddyworks.wtf">VCC Repository</a> and import it into your project.  
  			2. After that, use the toolbar menu to start the upgrade process:
- 			![Toolbar menu import.](./img/004.png)
+ 			![The current scene can be upgraded to Avatar Scene using the toolbar menu.](./img/004.png)
  			3. Once complete, the script will display a message saying so. You are done!
  			<Aside> The light and camera of Avatar Scene are disabled by default, since your existing objects still exist. You can disable your old lights and cameras and activate the new ones inside _System</Aside>
  		</Steps>
