--- a/src/content/docs/avatardynamics/modding.mdx
+++ b/src/content/docs/avatardynamics/modding.mdx
@@ -20,7 +20,7 @@ We currently don't know how far you can push this, but at least 200 sounds are p
 
 #### Prepare the Audio Files
 Make sure your sounds all use these import settings:
-![Ideal audio import settings for the audio clips.](./img/002.png)  
+![Ideal audio import settings for the audio clips.](./img/002.webp)  
 This gives you a good compatibility and space efficient import.  
 
 #### Add your Sounds to the Audio Component
