--- a/src/content/docs/expressionsextension/intro.mdx
+++ b/src/content/docs/expressionsextension/intro.mdx
@@ -4,7 +4,7 @@ description: Gimmick for face expression mixing, useful for photography.
 ---
 import { Aside } from '@astrojs/starlight/components';
 
-![BUDDYWORKS Expressions Extension Banner](./img/banner.png)  
+![BUDDYWORKS Expressions Extension Banner](./img/banner.webp)  
 
 *Gimmick for face expression mixing, useful for photography.*
 
