--- a/src/content/docs/framework/intro.mdx
+++ b/src/content/docs/framework/intro.mdx
@@ -4,7 +4,7 @@ description: Quick-start your creation process, every time!
 ---
 import { Aside } from '@astrojs/starlight/components';
 
-![BUDDYWORKS Avatar Framework Banner](./img/banner.png)  
+![BUDDYWORKS Avatar Framework Banner](./img/banner.webp)  
 
 *Quick-start your creation process, every time!*
 
