--- a/src/content/docs/framework/setup.mdx
+++ b/src/content/docs/framework/setup.mdx
@@ -8,7 +8,7 @@ Getting started is simple, just grab the package from our <a href="https://repo.
 
 After import, you can add the resource data into your /Assets/ folder using the new Toolbar Menu:  
 
-![The framework data can be imported using the toolbar menu items.](./img/001.png)  
+![The framework data can be imported using the toolbar menu items.](./img/001.webp)  
 
 Clicking those will open a prompt which asks you to choose a directory to add the files to.  
 
