--- a/src/content/docs/framework/structure-FX.mdx
+++ b/src/content/docs/framework/structure-FX.mdx
@@ -15,7 +15,7 @@ It contains the essential layers commonly used by avatars, you can duplicate and
 
 ### FX Animator
 
-![Screenshot of the FX animator included in Avatar Framework.](./img/003.png)  
+![Screenshot of the FX animator included in Avatar Framework.](./img/003.webp)  
 
 <Aside type="caution"> The animator is written in full WriteDefaults ON workflow, please keep that in mind.</Aside>
 
