--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -5,7 +5,7 @@ template: splash
 hero:
   tagline: Welcome to our documentation page. Here you will find instructions and explanations for our assets. 
   image:
-    file: ../../assets/Logo_2.png
+    file: ../../assets/Logo_2.webp
   actions:
     - text: Browse
       link: /welcome/intro/
