--- a/src/content/docs/posesextension/action.mdx
+++ b/src/content/docs/posesextension/action.mdx
@@ -56,7 +56,7 @@ Helper logic to migrate your current pose between enabled and disabled eyelook.
 As PE works in two different pose spaces depending on whenever Eyelook is active or not, PE needs to be reengaged to go through the correct branch. This would reset your current selected pose bank, which this writes back to make the migration more seamless.
 
 ### Support Logic B
-![BUDDYWORKS Poses Extension support layer B, interfacing with layer A.](./img/005.png) 
+![BUDDYWORKS Poses Extension support layer B, interfacing with layer A.](./img/005.webp) 
 
 **Showcase Logic**  
 Runs the showcase feature. It does so by using Parameter drivers to run the Load-triggers.  
