--- a/src/content/docs/posesextension/setup.mdx
+++ b/src/content/docs/posesextension/setup.mdx
@@ -8,7 +8,7 @@ import { Aside } from '@astrojs/starlight/components';
 
 Setup is easy, just add the prefab to your avatar and you are ready to go!
 
-![The prefabs, among other things can be spawned into the hierarchy using the toolbar menu.](./img/001.png)  
+![The prefabs, among other things can be spawned into the hierarchy using the toolbar menu.](./img/001.webp)  
 
 
 ### Which version to pick?
@@ -30,7 +30,7 @@ These options exist for convenience.
 If you want to be able to fly with GoGo Loco, you pick the "Beyond" version, else use the "All" one.
 
 ### Settings
-![Settings window, allowing you to change the sync state of each PE component.](./img/009.png)  
+![Settings window, allowing you to change the sync state of each PE component.](./img/009.webp)  
 The settings window that can be opened in the menu toolbar allow you to change whenever a feature is synced or not. Syncing costs parameters, so adjust to your needs.  
 Regardless of your choice, all features will always be present locally.
 
@@ -40,7 +40,7 @@ PE performs checks to ensure that the necessary component is present in your pro
 If an option is greyed out, you are missing the dependency needed for that option in your project.  
 You don't need to import all dependencies to use PE, either VRCFury or ModularAvatar is sufficient.
 
-![Toolbar menus that are greyed out are missing their dependencies.](./img/002.png)  
+![Toolbar menus that are greyed out are missing their dependencies.](./img/002.webp)  
 
 ### Checks  
 VRCFury = Is package `com.vrcfury.vrcfury` present?  
