--- a/src/content/docs/toolbox/intro.mdx
+++ b/src/content/docs/toolbox/intro.mdx
@@ -3,7 +3,7 @@ title: BUDDYWORKS Toolbox
 description: Various tools for avatars.
 ---
 
-![BUDDYWORKS Toolbox Banner](./img/banner.png)  
+![BUDDYWORKS Toolbox Banner](./img/banner.webp)  
 
 *Various tools for avatars.*
 
