--- a/src/content/docs/toolbox/setup.mdx
+++ b/src/content/docs/toolbox/setup.mdx
@@ -10,8 +10,8 @@ import { Steps } from '@astrojs/starlight/components';
 
 Setup is easy, select your avatar in the hierarchy and add the prefab(s) to your avatar using the toolbar menu.
 
-![The prefabs can be added via the toolbar menu.](./img/001.png)
-![Prefabs in Hierarchy.](./img/002.png)  
+![The prefabs can be added via the toolbar menu.](./img/001.webp)
+![Prefabs in Hierarchy.](./img/002.webp)  
 
 You can choose which [components](/toolbox/overview/) you want, or all of them at once.
 
