--- a/src/content/docs/expressionsextension/customize.mdx
+++ b/src/content/docs/expressionsextension/customize.mdx
@@ -8,8 +8,8 @@ import { Aside } from '@astrojs/starlight/components';
 
 A script is provided that lets you add rudamentary support for non-standard avatars.
 
-![Toolbar menu location for the customizer.](./img/006.png)  
-![Customizer Editor window.](./img/007.png)  
+![Toolbar menu location for the customizer.](./img/006.webp)  
+![Customizer Editor window.](./img/007.webp)  
 
 The editor window will grab all current expression clips and offer you to reassign those to your avatars blendshapes. This is very simple, and will likely not give you optimal results.  
 
