--- a/src/content/docs/expressionsextension/fx.mdx
+++ b/src/content/docs/expressionsextension/fx.mdx
@@ -5,14 +5,14 @@ description: Gimmick for face expression mixing, useful for photography.
 import { Aside } from '@astrojs/starlight/components';
 
 ### Main Logic
-![EE FX Controller Main Logic Layer Root.](./img/003.png)  
-![EE FX Controller Main Logic Layer Blendtree.](./img/005.png)  
+![EE FX Controller Main Logic Layer Root.](./img/003.webp)  
+![EE FX Controller Main Logic Layer Blendtree.](./img/005.webp)  
 
 By default, EE will be inactive and wait for EE/Active to be true.  
 Once that is the case, EE will be engaged and is controlled using the floats.
 
 ### Support Logic
-![EE Action Controller Support Layer.](./img/004.png)  
+![EE Action Controller Support Layer.](./img/004.webp)  
 This layer is used for any additional functions.
 
 Currently, it is responsible for making the infinite circle loop work for Mouth and Eye selection.
