--- a/src/content/docs/posesextension/intro.mdx
+++ b/src/content/docs/posesextension/intro.mdx
@@ -4,7 +4,7 @@ description: Locomotion-agnostic pose framework.
 ---
 import { Aside } from '@astrojs/starlight/components';
 
-![BUDDYWORKS Poses Extension Banner](./img/banner.png)  
+![BUDDYWORKS Poses Extension Banner](./img/banner.webp)  
 
 *Locomotion-agnostic pose framework.*
 
