--- a/src/content/docs/posesextension/intro.mdx
+++ b/src/content/docs/posesextension/intro.mdx
@@ -9,7 +9,8 @@ import { Aside } from '@astrojs/starlight/components';
 *Locomotion-agnostic pose framework.*
 
 #### Welcome to the Poses Extension Docs
-Poses Extension is a Locomotion-agnostic pose/emote framework prefilled with various poses made for photography.  
+Locomotion-agnostic pose system for VRChat Avatars, meant to be used for photography.  
+Make beautiful photos of your avatar, even in Desktop mode!
 
 The following pages will tell you some things about the system.
 
