Fixed wrong references in AD Modding docs.

--- a/src/content/docs/avatardynamics/modding.mdx
+++ b/src/content/docs/avatardynamics/modding.mdx
@@ -5,14 +5,14 @@ description: Free and simple avatar dynamics!
 import { Aside } from '@astrojs/starlight/components';
 
 :::note
-The Modding documentation assumes existing Unity knowledge and how to work with VRCFury Prefabs to locate data like the Action Controller.
+The Modding documentation assumes existing Unity knowledge and how to work with VRCFury Prefabs to locate data like the FX Controller.
 :::
 
 ### Notes and Caveats
 Since AD is distributed as a Package, you will need to reapply your modifications after every update. 
 Using the .unitypackage version is more recommended for more permanent setups, this will make updating the asset more difficult though   
 
-Do not store custom data inside the AD Folder, since the data gets replaced after every update or reinstallation of the PE Package. **Store any custom data in /Assets/.**  
+Do not store custom data inside the AD Folder, since the data gets replaced after every update or reinstallation of the AD Package. **Store any custom data in /Assets/.**  
 
 ### Adding new Sounds
 The noseboop feature comes with an easy to edit layer to increase the number of unique noseboop sounds you can have.  
