Updated PE docs for PE5

--- a/src/content/docs/posesextension/components.mdx
+++ b/src/content/docs/posesextension/components.mdx
@@ -13,4 +13,5 @@ Along with the posing itself, PE consists of a few sub-components that work addi
 	<Card title="Mirror">Mirrors the current pose, giving more versatility to all poses.</Card>
 	<Card title="View Adjust">Optional component that allows you to adjust the direction your avatar is looking.</Card>
 	<Card title="Hand Adjust">Optional component that can be used to override the current poses' gesture.</Card>
+	<Card title="Head Adjust">Optional component that gives head move and tilt options for all poses.</Card>
 </CardGrid>
