--- a/src/content/docs/posesextension/structure.mdx
+++ b/src/content/docs/posesextension/structure.mdx
@@ -19,11 +19,14 @@ import { Aside } from '@astrojs/starlight/components';
 - **PE/Settings/ViewPointProne [Bool]:** *Unsynced* parameter overriding viewport adjust for prone.
 - **PE/Settings/TrackingOverride [Bool]:** *Unsynced* parameter which selects the tracking branch for partial tracking.
 - **PE/Settings/ForceJumpReset [Bool]:** *Unsynced* parameter which overrides GoGo Loco detection.
+- **PE/Settings/DisableProxy [Bool]:** *Unsynced* parameter which disables dial proxy-toggle handling.
 - **PE/Compatibility/GoLocomotion_StateBuffer [Bool]:** Saves the state of GoGo Loco locomotion before posing, is restored after posing.
 - **PE/ViewAdjust/Active [Bool]:** *Synced or Unsynced* parameter that states whenever ViewAdjust is active or not.
 - **PE/ViewAdjust/X & Y [Float]:** *Synced or Unsynced* parameter defining ViewAdjust X & Y direction.
 - **PE/HandAdjust/Active [Bool]:** *Synced or Unsynced* parameter that states whenever HandAdjust is active or not.  
 - **PE/HandAdjust/L & R [Float]:** *Synced or Unsynced* parameter defining selected hand gesture on each hand.
+- **PE/HeadAdjust/Active [Bool]:** *Synced or Unsynced* parameter that states whenever HeadAdjust is active or not.
+- **PE/HeadAdjust/X, Y & Z [Float]:** *Synced or Unsynced* parameter defining head position on each axis.
 - **PE/RandomPose/Trigger [Trigger/Bool]:** *Unsynced* parameter that invokes the random pose system.
 - **PE/RandomPose/PoseSet [Int]:** *Unsynced* helper parameter to determine a random pose.
 - **PE/Exit [Bool]:** *Unsynced* parameter used as condition placeholder for to-Exit transitions.
@@ -48,6 +51,13 @@ import { Aside } from '@astrojs/starlight/components';
 - **PE/Favorite/HandAdjust/WasActive_A [Bool]:** Stored value for PE/Favorite/HandAdjust/WasActive_A, A being the respective save slot.
 - **PE/Favorite/HandAdjust/L_A [Float]:** Stored value for PE/HandAdjust/L, A being the respective save slot.
 - **PE/Favorite/HandAdjust/R_A [Float]:** Stored value for PE/HandAdjust/R, A being the respective save slot.
+- **PE/Favorite/HeadAdjust/WasActive_A [Bool]:** Stored value for PE/Favorite/HeadAdjust/WasActive_A, A being the respective save slot.
+- **PE/Favorite/HeadAdjust/X_A [Float]:** Stored value for PE/HeadAdjust/X, A being the respective save slot.
+- **PE/Favorite/HeadAdjust/Y_A [Float]:** Stored value for PE/HeadAdjust/Y, A being the respective save slot.
+- **PE/Favorite/HeadAdjust/Z_A [Float]:** Stored value for PE/HeadAdjust/Z, A being the respective save slot.
+- **PE/Proxy/ViewAdjust [Bool]:** Triggers PE/ViewAdjust/Active on when it's dials are used.
+- **PE/Proxy/HandAdjust [Bool]:** Triggers PE/HandAdjust/Active on when it's dials are used.
+- **PE/Proxy/HeadAdjust [Bool]:** Triggers PE/HeadAdjust/Active on when it's dials are used.
 
 ### API
 Refer to <a href="/posesextension/interface">Interface</a>
