Updated Astro to 5.2.6

--- a/src/content/docs/posesextension/structure.mdx
+++ b/src/content/docs/posesextension/structure.mdx
@@ -55,6 +55,7 @@ import { Aside } from '@astrojs/starlight/components';
 - **PE/Favorite/HeadAdjust/X_A [Float]:** Stored value for PE/HeadAdjust/X, A being the respective save slot.
 - **PE/Favorite/HeadAdjust/Y_A [Float]:** Stored value for PE/HeadAdjust/Y, A being the respective save slot.
 - **PE/Favorite/HeadAdjust/Z_A [Float]:** Stored value for PE/HeadAdjust/Z, A being the respective save slot.
+- **PE/HeadAdjust/Reset [Trigger]:** Will reset HeadAdjust to its default values.
 - **PE/Proxy/ViewAdjust [Bool]:** Triggers PE/ViewAdjust/Active on when it's dials are used.
 - **PE/Proxy/HandAdjust [Bool]:** Triggers PE/HandAdjust/Active on when it's dials are used.
 - **PE/Proxy/HeadAdjust [Bool]:** Triggers PE/HeadAdjust/Active on when it's dials are used.
