--- a/src/content/docs/posesextension/action.mdx
+++ b/src/content/docs/posesextension/action.mdx
@@ -7,7 +7,7 @@ import { Aside } from '@astrojs/starlight/components';
 <Aside>The action controller for the **GGL-Variant** is a simpler version of this, the idea is the same.</Aside>
 
 ### Poses&Dances
-![BUDDYWORKS Poses Extension main action logic.](./img/003.png)  
+![BUDDYWORKS Poses Extension main action logic.](./img/003.webp)  
 
 By default, PE will be inactive and wait for any kind of input.  
 Whenever PE/Set is greater than 0, the layer will advance to *Warmup*, which is responsible to put the avatar in a posable state. The warmup transition is forked, depending on whenever Eyelook is engaged or not. The difference is whenever eyes should be included in pose space or not.  
@@ -29,7 +29,7 @@ Each state machine contains a normal and a mirrored pose of each category's bank
 You can make use of the state maschines highlighted in the image "Custom Poses (90)" and "Dances (100+)" to include your own data in PE, more on that in the [Modding Section](/posesextension/modding).
 
 ### Support Logic A
-![BUDDYWORKS Poses Extension support layer A, doing various parameter-driving tasks.](./img/004.png)  
+![BUDDYWORKS Poses Extension support layer A, doing various parameter-driving tasks.](./img/004.webp)  
 This layer is used for the majority of logic functions.
 
 **Reset / Reset Grounded**  
